@@ -29,5 +29,6 @@
 #define LENS_CHANGED_NOTIFICATION				@"LensChanged"
 #define LENS_SELECTED_FOR_EDIT_NOTIFICATION		@"LensSelectedForEdit"
 #define LENS_WAS_EDITED_NOTIFICATION			@"LensWasEdited"
+#define MACRO_MODE_CHANGED_NOTIFICATION			@"MacroModeChanged"
 #define SAVING_NOTIFICATION						@"Saving"
 #define UNITS_CHANGED_NOTIFICATION				@"UnitsChanged"
