@@ -32,6 +32,7 @@ NSString* const FTLensCount = @"LensCount";
 NSString* const FTLensIndex = @"LensIndex";
 NSString* const FTMetricKey = @"Metric";
 NSString* const FTSubjectDistanceKey = @"SubjectDistance";
+NSString* const FTMacroModeKey = @"MacroMode";
 
 NSString* const FTMigratedFrom10Key = @"MigratedFrom10";
 NSString* const FTMigratedFrom20Key = @"MigratedFrom20";
