@@ -5,6 +5,7 @@ New features:
   * Display selected camera and lens in the main view.
   * Add option to display distance as feet and inches as well as decimal feet.
   * Slider limits round numbers as per the selected units.
+  * Macro setting to give finer control over subject distance setting.
 
 Version 2.0.1
 January 1, 2010
